# QueriesWithArguments

./: CMakeLists.txt  main.cpp
